:sparkles: Support JDK17 xstream serialization tests